# Stiffness

./: README.md  pyproject.toml
stiffness/: __init__.py  app.py  routes.py
stiffness/services/: __init__.py  calcul_stiffness.py  interpolation.py
stiffness/templates/: dashboard.html  index.html  stiffness.html
