[tool.poetry]
name = "stiffness"
version = "0.1.0"
description = ""
authors = ["meriemsouissi <souissiimeriem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
